:adhesive_bandage: Use semantically correct heading, fix spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,12 +64,6 @@ h4 {
   margin-top: 2em;
 }
 
-@container (min-width: 600px) {
-  h1 {
-    margin-top: 0;
-  }
-}
-
 p {
   margin-top: 0.5rem;
   margin-bottom: 0;
